src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Selling_Total_F_L__c</fullName>
        <description>Total Freight Selling Price $
Unit Freight Selling Price $ * Quantity</description>
        <inlineHelpText>Total Freight Selling Price $
Unit Freight Selling Price $ * Quantity</inlineHelpText>
        <label>Total Freight Selling Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Unitary_Equipment_Price_FOB__c</fullName>
        <description>Unit Equipment Selling Price $
Unit Equipment Cost $ / (1- Equipment Gross Margin %)</description>
        <inlineHelpText>Unit Equipment Selling Price $
Unit Equipment Cost $ / (1- Equipment Gross Margin %)</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Unitary_Freight_Logistic__c</fullName>
        <description>Unit Freight Selling Price $
Unit Freight Cost $ / (1 - Freight Gross Margin %)</description>
        <inlineHelpText>Unit Freight Selling Price $
Unit Freight Cost $ / (1 - Freight Gross Margin %)</inlineHelpText>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Add_On__c</fullName>
        <description>Service Add On $</description>
        <inlineHelpText>Service Add On $</inlineHelpText>
        <label>Service Add On $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_up_Add_On__c</fullName>
        <description>Start-up Add On $</description>
        <inlineHelpText>Start-up Add On $</inlineHelpText>
        <label>Start-up Add On $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAG__c</fullName>
        <description>TAG</description>
        <inlineHelpText>TAG</inlineHelpText>
        <label>TAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Base_Equipment_Cost__c</fullName>
        <description>Total Base Equipment Cost $
ROUND((Item Price * Multiplier (PAR)),2) * Quantity</description>
        <formula>ROUND((UnitPrice * Multiplier_PAR__c),2) * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Base Equipment Cost $
ROUND((Item Price * Multiplier (PAR)),2) * Quantity</inlineHelpText>
        <label>Total Base Equipment Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Domestic_Freight_Amt__c</fullName>
        <description>Total Domestic Freight Add $
Domestic Freight $ * Quantity</description>
        <formula>Freight__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Domestic Freight Add $
Domestic Freight $ * Quantity</inlineHelpText>
        <label>Total Domestic Freight Add $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Domestic_Freight_Pct_Amt__c</fullName>
        <description>Total Domestic Freight % $
ROUND((Unit Equipment Cost $ * Domestic Freight %),2) * Quantity</description>
        <formula>ROUND((Equipment_Price_FOB__c * Freight_Percent__c),2) * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Domestic Freight % $
ROUND((Unit Equipment Cost $ * Domestic Freight %),2) * Quantity</inlineHelpText>
        <label>Total Domestic Freight % $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Domestic_Freight__c</fullName>
        <description>Total Domestic Freight $
(ROUND((Unit Equipment Cost $ * Domestic Freight %),2) + Domestic Freight $) * Quantity</description>
        <formula>(ROUND((Equipment_Price_FOB__c * Freight_Percent__c),2) + Freight__c) * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Domestic Freight $
(ROUND((Unit Equipment Cost $ * Domestic Freight %),2) + Domestic Freight $) * Quantity</inlineHelpText>
        <label>Total Domestic Freight $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Equipment_Price_FOB__c</fullName>
        <description>Total Equipment Cost $
Unit Equipment Cost $ * Quantity</description>
        <formula>Equipment_Price_FOB__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Equipment Cost $
Unit Equipment Cost $ * Quantity</inlineHelpText>
        <label>Total Equipment Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Freight_Logistic__c</fullName>
        <description>Unit Freight Cost $
(Unit Equipment Cost $ * Domestic Freight %) + Domestic Freight $ + Export Freight Add On $</description>
        <inlineHelpText>Unit Freight Cost $
(Unit Equipment Cost $ * Domestic Freight %) + Domestic Freight $ + Export Freight Add On $</inlineHelpText>
        <label>Unit Freight Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Logistics_Add_On__c</fullName>
        <description>Total Export Freight $
Export Freight Add On $ * Quantity</description>
        <formula>Logistics_Add_On__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Export Freight $
Export Freight Add On $ * Quantity</inlineHelpText>
        <label>Total Export Freight $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Outsource_Add_On__c</fullName>
        <description>Total Commission $
Commission Add On $ * Quantity</description>
        <formula>Outsource_Add_On__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Commission $
Commission Add On $ * Quantity</inlineHelpText>
        <label>Total Commission $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Selling_Discount__c</fullName>
        <description>Total Equipment + Freight Discount $
[Unit Equipment + Freight Discount $] * Quantity</description>
        <inlineHelpText>Total Equipment + Freight Discount $
[Unit Equipment + Freight Discount $] * Quantity</inlineHelpText>
        <label>Total Equipment + Freight Discount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Selling_Price_w_Log_Disc__c</fullName>
        <description>Total Equip+Freight Selling Price w Disc
[Unit Equip +Freight Selling Price w Disc] * Quantity</description>
        <inlineHelpText>Total Equip+Freight Selling Price w Disc
[Unit Equip +Freight Selling Price w Disc] * Quantity</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Selling_Price_w_Logistics_Disc__c</fullName>
        <description>Multi-Currency Total Equip+Freight Selling Price w Disc
[Unit Equip +Freight Selling Price w Disc] * Quantity</description>
        <inlineHelpText>Multi-Currency Total Equip+Freight Selling Price w Disc
[Unit Equip +Freight Selling Price w Disc] * Quantity</inlineHelpText>
        <label>Total Price</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Selling_Price_w_Logistics__c</fullName>
        <description>Total Equip + Freight Selling Price $
(Unit Equipment Selling Price $ + Unit Freight Selling Price $) * Quantity</description>
        <inlineHelpText>Total Equip + Freight Selling Price $
(Unit Equipment Selling Price $ + Unit Freight Selling Price $) * Quantity</inlineHelpText>
        <label>Total Equip + Freight Selling Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Service_Add_On__c</fullName>
        <description>Total Service $
Service Add On $ * Quantity</description>
        <formula>Service_Add_On__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Service $
Service Add On $ * Quantity</inlineHelpText>
        <label>Total Service $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Start_up_Add_On__c</fullName>
        <description>Total Start-up $
Start-up Add On $ * Quantity</description>
        <formula>Start_up_Add_On__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Start-up $
Start-up Add On $ * Quantity</inlineHelpText>
        <label>Total Start-up $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unitary_Selling_Discount__c</fullName>
        <description>Unit Equipment + Freight Discount $
([Unit Equipment + Freight Selling Price $] * [Equipment + Freight Discount %]) + [Equipment + Freight Discount $]</description>
        <inlineHelpText>Unit Equipment + Freight Discount $
([Unit Equipment + Freight Selling Price $] * [Equipment + Freight Discount %]) + [Equipment + Freight Discount $]</inlineHelpText>
        <label>Unit Equipment + Freight Discount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unitary_Selling_Price_w_Log_Disc__c</fullName>
        <description>Unit Equipment + Freight Selling Price w Disc
(Unit Equipment Selling Price $ + Unit Freight Selling Price $) - [Unit Equipment + Freight Discount $]</description>
        <inlineHelpText>Unit Equipment + Freight Selling Price w Disc
(Unit Equipment Selling Price $ + Unit Freight Selling Price $) - [Unit Equipment + Freight Discount $]</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unitary_Selling_Price_w_Logistics_Disc__c</fullName>
        <description>Multi-Currency Unit Equipment + Freight Selling Price w Disc
(Unit Equipment Selling Price + Unit Freight Selling Price) - [Unit Equipment + Freight Discount]</description>
        <inlineHelpText>Multi-Currency Unit Equipment + Freight Selling Price w Disc
(Unit Equipment Selling Price + Unit Freight Selling Price) - [Unit Equipment + Freight Discount]</inlineHelpText>
        <label>Unit Price</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unitary_Selling_Price_w_Logistics__c</fullName>
        <description>Unit Equipment + Freight Selling Price $
Unit Equipment Selling Price $ + Unit Freight Selling Price $</description>
        <inlineHelpText>Unit Equipment + Freight Selling Price $
Unit Equipment Selling Price $ + Unit Freight Selling Price $</inlineHelpText>
        <label>Unit Equipment + Freight Selling Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Supplier__c</fullName>
        <formula>PricebookEntry.Product2.Vendor_Supplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor/Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>m_Selling_Total_Equip_Price_FOB__c</fullName>
        <description>Multi-Currency Total Equipment Selling Price
Unit Equipment Selling Price * Quantity</description>
        <inlineHelpText>Multi-Currency Total Equipment Selling Price
Unit Equipment Selling Price * Quantity</inlineHelpText>
        <label>Total Price</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>m_Selling_Unitary_Equipment_Price_FOB__c</fullName>
        <description>Multi-Currency Unit Equipment Selling Price
Unit Equipment Cost / (1- Equipment Gross Margin %)</description>
        <inlineHelpText>Multi-Currency Unit Equipment Selling Price
Unit Equipment Cost / (1- Equipment Gross Margin %)</inlineHelpText>
        <label>Unit Price</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>m_Selling_Unitary_Freight_Logistic__c</fullName>
        <description>Multi-Currency Unit Freight Selling Price $
Unit Freight Cost $ / (1 - Freight Gross Margin %)</description>
        <inlineHelpText>Multi-Currency Unit Freight Selling Price $
Unit Freight Cost $ / (1 - Freight Gross Margin %)</inlineHelpText>
        <label>Freight</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>